INCLUDE_DIRECTORIES(${webrtc_SOURCE_DIR}/src)

INCLUDE(${webrtc_SOURCE_DIR}/webrtc_targets.cmake)
IF( NOT (CMAKE_BUILD_TYPE STREQUAL "Release"))
IF(WIN32)
ADD_EXECUTABLE(voe_test test.cc)
ADD_EXECUTABLE(vose_test vose_test.cc)
ADD_EXECUTABLE(video_test video_test.cc)

ADD_LIBRARY(gtest STATIC IMPORTED)
SET_TARGET_PROPERTIES(gtest PROPERTIES
							IMPORTED_LOCATION_DEBUG gtest-mdd.lib
							IMPORTED_LOCATION_RELEASE gtest-md.lib)

ADD_DEPENDENCIES(voe_test ${WEBRTC_AUDIO_TARGETS} ${WEBRTC_AUDIO_DEPEND} ${WEBRTC_COMMON_TARGETS})
ADD_DEPENDENCIES(vose_test ${WEBRTC_AUDIO_TARGETS} ${WEBRTC_AUDIO_DEPEND} ${WEBRTC_COMMON_TARGETS})
ADD_DEPENDENCIES(video_test ${WEBRTC_MEDIA_TARGETS} ${WEBRTC_VIDEO_TARGETS} ${WEBRTC_AUDIO_TARGETS} ${WEBRTC_VIDEO_DEPEND} ${WEBRTC_AUDIO_DEPEND} ${WEBRTC_COMMON_TARGETS} ${WEBRTC_TEST_DEPEND} directshow_baseclasses)

TARGET_LINK_LIBRARIES(voe_test ${WEBRTC_AUDIO_TARGETS} ${WEBRTC_AUDIO_DEPEND} ${WEBRTC_COMMON_TARGETS} gtest)
TARGET_LINK_LIBRARIES(vose_test ${WEBRTC_AUDIO_TARGETS} ${WEBRTC_AUDIO_DEPEND} ${WEBRTC_COMMON_TARGETS} gtest)
TARGET_LINK_LIBRARIES(video_test ${WEBRTC_MEDIA_TARGETS}
								 ${WEBRTC_SDK_TARGETS}
							     ${WEBRTC_VIDEO_TARGETS} 
								 ${WEBRTC_AUDIO_TARGETS} 
								 ${WEBRTC_VIDEO_DEPEND} 
								 ${WEBRTC_AUDIO_DEPEND} 
								 ${WEBRTC_COMMON_TARGETS} 
								 ${WEBRTC_TEST_DEPEND}
								 libeay32 ssleay32 libavcodec libavutil)


SET_TARGET_PROPERTIES(voe_test PROPERTIES FOLDER "test")
SET_TARGET_PROPERTIES(vose_test PROPERTIES FOLDER "test")
SET_TARGET_PROPERTIES(video_test PROPERTIES FOLDER "test")
ENDIF(WIN32)
ENDIF( NOT (CMAKE_BUILD_TYPE STREQUAL "Release"))
