INCLUDE_DIRECTORIES(${webrtc_SOURCE_DIR}/src)


ADD_DEFINITIONS(-DWEBRTC_APM_DEBUG_DUMP=0 -DWEBRTC_UNTRUSTED_DELAY -DWEBRTC_INTELLIGIBILITY_ENHANCER=1 -DWEBRTC_NS_FLOAT)

LIST(APPEND AUDIO_PROCESSING_SOURCES
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_core.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_core.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_core_optimized_methods.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_resampler.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_resampler.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/echo_cancellation.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/echo_cancellation.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/aec3_constants.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/block_framer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/block_framer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/block_processor.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/block_processor.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/cascaded_biquad_filter.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/cascaded_biquad_filter.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_canceller3.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_canceller3.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_path_delay_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_path_delay_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_path_variability.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_remover.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/echo_remover.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/frame_blocker.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/frame_blocker.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/render_delay_buffer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/render_delay_buffer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/render_delay_controller.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec3/render_delay_controller.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/aecm_core.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/aecm_core.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/echo_control_mobile.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/echo_control_mobile.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/agc.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/agc.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/agc_manager_direct.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/agc_manager_direct.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/gain_map_internal.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/loudness_histogram.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/loudness_histogram.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/utility.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/utility.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/audio_buffer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/audio_buffer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/audio_processing_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/audio_processing_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/array_util.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/array_util.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/complex_matrix.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/covariance_matrix_generator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/covariance_matrix_generator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/matrix.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/nonlinear_beamformer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/beamformer/nonlinear_beamformer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/common.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_cancellation_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_cancellation_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_control_mobile_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_control_mobile_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/circular_buffer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/circular_buffer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/mean_variance_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/mean_variance_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/moving_max.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/moving_max.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/normalized_covariance_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/echo_detector/normalized_covariance_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/gain_control_for_experimental_agc.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/gain_control_for_experimental_agc.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/gain_control_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/gain_control_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/include/audio_processing.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/include/audio_processing.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/include/config.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/include/config.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/biquad_filter.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/biquad_filter.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/down_sampler.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/down_sampler.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/gain_applier.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/gain_applier.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/gain_selector.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/gain_selector.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/level_controller.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/level_controller.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/level_controller_constants.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/noise_level_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/noise_level_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/noise_spectrum_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/noise_spectrum_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/peak_level_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/peak_level_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/saturating_gain_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/saturating_gain_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/signal_classifier.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_controller/signal_classifier.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_estimator_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/level_estimator_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/logging/apm_data_dumper.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/logging/apm_data_dumper.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/low_cut_filter.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/low_cut_filter.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/noise_suppression_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/noise_suppression_impl.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/render_queue_item_verifier.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/residual_echo_detector.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/residual_echo_detector.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/rms_level.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/rms_level.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/splitting_filter.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/splitting_filter.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/three_band_filter_bank.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/three_band_filter_bank.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/common.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/daubechies_8_wavelet_coeffs.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/dyadic_decimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/moving_moments.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/moving_moments.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/transient_detector.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/transient_detector.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/transient_suppressor.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/transient_suppressor.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/wpd_node.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/wpd_node.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/wpd_tree.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/transient/wpd_tree.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/typing_detection.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/typing_detection.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/block_mean_calculator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/block_mean_calculator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/delay_estimator.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/delay_estimator.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/delay_estimator_internal.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/delay_estimator_wrapper.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/delay_estimator_wrapper.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft_tables_common.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/common.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/gmm.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/gmm.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/noise_gmm_tables.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pitch_based_vad.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pitch_based_vad.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pitch_internal.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pitch_internal.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pole_zero_filter.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/pole_zero_filter.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/standalone_vad.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/standalone_vad.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/vad_audio_proc.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/vad_audio_proc.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/vad_audio_proc_internal.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/vad_circular_buffer.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/vad_circular_buffer.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/voice_activity_detector.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/voice_activity_detector.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/vad/voice_gmm_tables.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/voice_detection_impl.cc
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/voice_detection_impl.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/intelligibility/intelligibility_enhancer.cc
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/intelligibility/intelligibility_enhancer.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/intelligibility/intelligibility_utils.cc
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/intelligibility/intelligibility_utils.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/aecm_core_c.cc
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/legacy/analog_agc.c
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/legacy/analog_agc.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/legacy/digital_agc.c
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/legacy/digital_agc.h
    ${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/agc/legacy/gain_control.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/defines.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/noise_suppression.c
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/noise_suppression.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/ns_core.c
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/ns_core.h
	${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/windows_private.h
)

IF(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "AMD64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "ia32")
LIST(APPEND AUDIO_PROCESSING_SOURCES
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_core_sse2.cc
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft_sse2.cc
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft_tables_neon_sse2.h
)
ENDIF()

IF(CMAKE_SYSTEM_PROCESSOR STREQUAL "armv7-a" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
LIST(APPEND AUDIO_PROCESSING_SOURCES
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aec/aec_core_neon.cc
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/aecm/aecm_core_neon.cc
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft_neon.cc
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/utility/ooura_fft_tables_neon_sse2.h
			${webrtc_SOURCE_DIR}/src/webrtc/modules/audio_processing/ns/nsx_core_neon.c	  
)
ENDIF()

ADD_LIBRARY(rtc_audio_processing STATIC ${AUDIO_PROCESSING_SOURCES})
SET_TARGET_PROPERTIES(rtc_audio_processing PROPERTIES FOLDER "webrtc")